--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -11,6 +11,7 @@
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
   --color-blue: #155dfc;
+  --color-gray: #b5afaf;
 }
 
 @media (prefers-color-scheme: dark) {
